syntax = "proto3";

option csharp_namespace = "GYZ.Discount.Grpc";
import "google/protobuf/timestamp.proto";

package discount;

service DiscountProtoService {
	rpc GetDiscount (GetDiscountRequest) returns (CouponModel);
	rpc CreateDiscount (CreateDiscountRequest) returns (CouponModel);
	rpc UpdateDiscount (UpdateDiscountRequest) returns (CouponModel);
	rpc DeleteDiscount (DeleteDiscountRequest) returns (DeleteDiscountResponse);
}

message CouponModel {
	string id = 1;
    string code = 2;
	string title = 3;
	string description = 4;
    string type = 5;
    string status = 6;
    double discountValue = 7;
    double minPurchaseAmount = 8;
    double maxDiscountAmount = 9;
    google.protobuf.Timestamp validFrom = 10;
    google.protobuf.Timestamp validTo = 11;
    int32 quantityRemain = 12;
    int32 usageLimit = 13;
    google.protobuf.Timestamp createdAt = 14;
    google.protobuf.Timestamp updatedAt = 15;
    google.protobuf.Timestamp deletedAt = 16;
}

message GetDiscountRequest {
	string id = 1;
}

message CreateDiscountRequest {
	string title = 1;
    string description = 2;
    double discountValue = 3;
    double minPurchaseAmount = 4;
    double maxDiscountAmount = 5;
    string validFrom = 6;
    string validTo = 7;
    int32 usageLimit = 8;
}


message UpdateDiscountRequest {
	CouponModel coupon = 1;
}

message DeleteDiscountRequest {
	string productName = 1;
}

message DeleteDiscountResponse {
	bool success = 1;
}